@@ -1,4 +1,4 @@
-.TH IBNETDISCOVER 8 "June 2, 2007" "OpenIB" "OpenIB Diagnostics"
+.TH IBNETDISCOVER 8 "June 4, 2007" "OpenIB" "OpenIB Diagnostics"
 
 .SH NAME
 ibnetdiscover \- discover InfiniBand topology
@@ -131,45 +131,45 @@ devid=0x5a06
 sysimgguid=0x5442ba00003000
 switchguid=0x5442ba00003080
 Switch  24 "S-005442ba00003080"         # "ISR9024 Voltaire" base port 0 lid 6 lmc 0
-[22]    "H-0008f10403961354"[1]         # "MT23108 InfiniHost Mellanox Technologies" lid 4
-[10]    "S-0008f10400410015"[1]         # "SW-6IB4 Voltaire" lid 3
-[8]     "H-0008f10403960558"[2]         # "MT23108 InfiniHost Mellanox Technologies" lid 14
-[6]     "S-0008f10400410015"[3]         # "SW-6IB4 Voltaire" lid 3 
-[12]    "H-0008f10403960558"[1]         # "MT23108 InfiniHost Mellanox Technologies" lid 10
+[22]    "H-0008f10403961354"[1]         # "MT23108 InfiniHost Mellanox Technologies" lid 4 4xSDR
+[10]    "S-0008f10400410015"[1]         # "SW-6IB4 Voltaire" lid 3 4xSDR
+[8]     "H-0008f10403960558"[2]         # "MT23108 InfiniHost Mellanox Technologies" lid 14 4xSDR
+[6]     "S-0008f10400410015"[3]         # "SW-6IB4 Voltaire" lid 3 4xSDR
+[12]    "H-0008f10403960558"[1]         # "MT23108 InfiniHost Mellanox Technologies" lid 10 4xSDR
 
 vendid=0x8f1
 devid=0x5a05
 switchguid=0x8f10400410015
 Switch  8 "S-0008f10400410015"          # "SW-6IB4 Voltaire" base port 0 lid 3 lmc 0
-[6]     "H-0008f10403960984"[1]         # "MT23108 InfiniHost Mellanox Technologies" lid 16
-[4]     "H-005442b100004900"[1]         # "MT23108 InfiniHost Mellanox Technologies" lid 12
-[1]     "S-005442ba00003080"[10]                # "ISR9024 Voltaire" lid 6
-[3]     "S-005442ba00003080"[6]         # "ISR9024 Voltaire" lid 6
+[6]     "H-0008f10403960984"[1]         # "MT23108 InfiniHost Mellanox Technologies" lid 16 4xSDR
+[4]     "H-005442b100004900"[1]         # "MT23108 InfiniHost Mellanox Technologies" lid 12 4xSDR
+[1]     "S-005442ba00003080"[10]                # "ISR9024 Voltaire" lid 6 1xSDR
+[3]     "S-005442ba00003080"[6]         # "ISR9024 Voltaire" lid 6 4xSDR
 
 vendid=0x2c9
 devid=0x5a44
 caguid=0x8f10403960984
 Ca      2 "H-0008f10403960984"          # "MT23108 InfiniHost Mellanox Technologies"
-[1]     "S-0008f10400410015"[6]         # lid 16 lmc 1 "SW-6IB4 Voltaire" lid 3
+[1]     "S-0008f10400410015"[6]         # lid 16 lmc 1 "SW-6IB4 Voltaire" lid 3 4xSDR
 
 vendid=0x2c9
 devid=0x5a44
 caguid=0x5442b100004900
 Ca      2 "H-005442b100004900"          # "MT23108 InfiniHost Mellanox Technologies"
-[1]     "S-0008f10400410015"[4]         # lid 12 lmc 1 "SW-6IB4 Voltaire" lid 3
+[1]     "S-0008f10400410015"[4]         # lid 12 lmc 1 "SW-6IB4 Voltaire" lid 3 4xSDR
 
 vendid=0x2c9
 devid=0x5a44
 caguid=0x8f10403961354
 Ca      2 "H-0008f10403961354"          # "MT23108 InfiniHost Mellanox Technologies"
-[1]     "S-005442ba00003080"[22]                # lid 4 lmc 1 "ISR9024 Voltaire" lid 6
+[1]     "S-005442ba00003080"[22]                # lid 4 lmc 1 "ISR9024 Voltaire" lid 6 4xSDR
 
 vendid=0x2c9
 devid=0x5a44
 caguid=0x8f10403960558
 Ca      2 "H-0008f10403960558"          # "MT23108 InfiniHost Mellanox Technologies"
-[2]     "S-005442ba00003080"[8]         # lid 14 lmc 1 "ISR9024 Voltaire" lid 6
-[1]     "S-005442ba00003080"[12]                # lid 10 lmc 1 "ISR9024 Voltaire" lid 6
+[2]     "S-005442ba00003080"[8]         # lid 14 lmc 1 "ISR9024 Voltaire" lid 6 4xSDR
+[1]     "S-005442ba00003080"[12]                # lid 10 lmc 1 "ISR9024 Voltaire" lid 6 1xSDR
 .fi
 
 When grouping is used, IB nodes are organized into chasses which are
