@@ -1,3 +1,9 @@
+2007-06-04 Hal Rosenstock <halr@voltaire.com>
+
+	* include/ibnetdiscover.h, src/ibnetdiscover.c,
+	  man/ibnetdiscover.8: Add link width and speed to topology
+	  file output
+
 2007-06-02 Hal Rosenstock <halr@voltaire.com>
 
 	* man/ibnetdiscover.8: Add topology file format section
